--- a/cellrank-2-explorer/index.html
+++ b/cellrank-2-explorer/index.html
@@ -6,7 +6,7 @@
     <title>CellRank 2 Explorer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      body { margin: 0; background: #0f172a; color: white; overflow: hidden; }
+      body { margin: 0; background: #0f172a; color: white; overflow: auto; }
       canvas { width: 100vw; height: 100vh; }
     </style>
   <script type="importmap">
